manifests/kubernetes-dashboard/kubernetes-dashboard.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/component: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
    - host: dashboard.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port: 
                  number: 80
